{{$NEXT}}

1.15     2021-01-24

- Fix generated precious.toml to expect `perltidy --assert-tidy` to exit with
  2 when a file is not tidy, not 1.


1.14     2021-01-24

- Include Test::TidyAll plugin if there's a tidyall.ini file present.

- Skip the DROLSKY::BundleAuthordep plugin when checking for stale prereqs.


1.13     2021-01-21

- Use GitHub issues for all distros.


1.12     2021-01-08

- Fixed a bug in the generated precious.toml config for perlcritic.

- Added podchecker and podtidy to the generated precious.toml.

- Added a helper to generate some additional dev tooling to bootstrap
  installing precious and omegasort, as well as a pre-commit script and a
  helper to set that up.

- Added a plugin that updates the dist.ini to depend on the latest version of
  this bundle.


1.11     2020-12-29

- Fix bug in DROLSKY::PerlLinterConfigFiles plugin.


1.10     2020-12-29

- Replace code to set up tidyall with code to set up precious
  (https://github.com/houseabsolute/precious).


1.09     2020-07-20

- Update generated perltidyrc to work around changes in recent Perl::Tidy
  versions that interact badly with
  https://github.com/houseabsolute/perl-code-tidyall/issues/84.


1.08     2020-05-03

- Require PromptIfStale 0.056. That version skips all local plugins when
  checking for staleness. This lets me revert the change in 1.07.


1.07     2020-04-26

- Make the PromptIfStale plugin skip all inc::* packages that live in the inc/
  dir.


1.06     2020-03-14

- Allow an existing COPYRIGHT section to override the section generated by
  Pod::Weaver. This fixes https://github.com/houseabsolute/Specio/issues/17.


1.05     2019-11-29

- Fix check for whether we're being run in CI in the Pod::Weaver bundle as
  well. Without this the bundle generated bad POD with an empty `L<>` tag.


1.04     2019-11-28

- Fix check for whether we're being run in CI.


1.03     2019-11-28

- Don't include GitHub::Meta when running under Azure Pipelines.


1.02     2019-11-09
