@@ -29,10 +29,11 @@ lint_failure_exit_codes = 2
 type = "both"
 include = [ "**/*.{pl,pm,t,psgi}" ]
 cmd = [ "perltidy", "--profile=$PRECIOUS_ROOT/perltidyrc" ]
-lint_flags = [ "--assert-tidy", "--standard-output" ]
+lint_flags = [ "--assert-tidy", "--no-standard-output", "--outfile=/dev/null" ]
 tidy_flags = [ "--backup-and-modify-in-place", "--backup-file-extension=/" ]
 ok_exit_codes = 0
 lint_failure_exit_codes = 2
+expect_stderr = true
 
 [commands.podchecker]
 type = "lint"
